<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.marketingRequest.ReviewChosenStoriesMarketingFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPinStoryHomePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pinStories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/cairo_semibold"
            android:gravity="center_vertical"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_pin_item_marketing_request"
            tools:text="@string/pin_a_story_to_the_home_page" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtChooseStories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center_vertical"
        android:text="@string/choose_the_stories_you_want_to_add"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@id/cvPinStoryHomePage"
        app:layout_constraintStart_toStartOf="@id/cvPinStoryHomePage"
        app:layout_constraintTop_toBottomOf="@id/cvPinStoryHomePage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChooseStories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/edtNumOfDayMarketing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtChooseStories"
        tools:itemCount="3"
        tools:listitem="@layout/item_choose_story" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNumOfDayMarketing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/number_of_marketing_campaign_days"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@id/cvPinStoryHomePage"
        app:layout_constraintStart_toStartOf="@id/cvPinStoryHomePage"
        app:layout_constraintTop_toBottomOf="@id/rvChooseStories" />

    <TextView
        android:id="@+id/txtMarketingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center_vertical"
        android:text="@string/marketing_value"
        android:textColor="@color/grey"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@id/btnContinuation"
        app:layout_constraintStart_toStartOf="@id/cvPinStoryHomePage" />

    <TextView
        android:id="@+id/marketingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center_vertical"
        android:text="@string/marketing_value"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@id/btnContinuation"
        app:layout_constraintEnd_toEndOf="@id/cvPinStoryHomePage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinuation"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_28sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:fontFamily="@font/cairo_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/pay_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>